# serializer version: 1
# name: test_airzone_create_climates[climate.airzone_2_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'auto',
        'low',
        'medium',
        '75%',
        'high',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 15.0,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.airzone_2_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'airzone',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 393>,
    'translation_key': None,
    'unique_id': 'airzone_unique_id_2:1',
    'unit_of_measurement': None,
  })
# ---
# name: test_airzone_create_climates[climate.airzone_2_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 62,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 22.3,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: 'auto',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'auto',
        'low',
        'medium',
        '75%',
        'high',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Airzone 2:1',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.OFF: 'off'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 15.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 393>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 19.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.airzone_2_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_airzone_create_climates[climate.aux_heat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 15.0,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.aux_heat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'airzone',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': 'airzone_unique_id_4:1',
    'unit_of_measurement': None,
  })
# ---
# name: test_airzone_create_climates[climate.aux_heat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 22.0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Aux Heat',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 15.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 385>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 20.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.aux_heat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_airzone_create_climates[climate.despacho-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 15.0,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.despacho',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'airzone',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': 'airzone_unique_id_1:4',
    'unit_of_measurement': None,
  })
# ---
# name: test_airzone_create_climates[climate.despacho-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 36,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 21.2,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Despacho',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.OFF: 'off'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 15.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 385>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 19.4,
    }),
    'context': <ANY>,
    'entity_id': 'climate.despacho',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_airzone_create_climates[climate.dkn_plus-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'auto',
        'low',
        '40%',
        'medium',
        '80%',
        'high',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 32.2,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 17.8,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.dkn_plus',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'airzone',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 395>,
    'translation_key': None,
    'unique_id': 'airzone_unique_id_3:1',
    'unit_of_measurement': None,
  })
# ---
# name: test_airzone_create_climates[climate.dkn_plus-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 21.7,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: '40%',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'auto',
        'low',
        '40%',
        'medium',
        '80%',
        'high',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'DKN Plus',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.COOLING: 'cooling'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 32.2,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 17.8,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 395>,
      <ClimateEntityStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: 25.0,
      <ClimateEntityStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: 22.8,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.dkn_plus',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_cool',
  })
# ---
# name: test_airzone_create_climates[climate.dorm_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 15.0,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.dorm_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'airzone',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': 'airzone_unique_id_1:3',
    'unit_of_measurement': None,
  })
# ---
# name: test_airzone_create_climates[climate.dorm_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 35,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 20.8,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dorm #1',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 15.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 385>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 19.3,
    }),
    'context': <ANY>,
    'entity_id': 'climate.dorm_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_airzone_create_climates[climate.dorm_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 15.0,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.dorm_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'airzone',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': 'airzone_unique_id_1:5',
    'unit_of_measurement': None,
  })
# ---
# name: test_airzone_create_climates[climate.dorm_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 40,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 20.5,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dorm #2',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.OFF: 'off'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 15.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 385>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 19.5,
    }),
    'context': <ANY>,
    'entity_id': 'climate.dorm_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_airzone_create_climates[climate.dorm_ppal-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'auto',
        'low',
        'high',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 15.0,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.dorm_ppal',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'airzone',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 393>,
    'translation_key': None,
    'unique_id': 'airzone_unique_id_1:2',
    'unit_of_measurement': None,
  })
# ---
# name: test_airzone_create_climates[climate.dorm_ppal-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 39,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 21.1,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: 'auto',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'auto',
        'low',
        'high',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dorm Ppal',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.HEATING: 'heating'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 15.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 393>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 19.2,
    }),
    'context': <ANY>,
    'entity_id': 'climate.dorm_ppal',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_airzone_create_climates[climate.salon-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'auto',
        'low',
        'medium',
        'high',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 15.0,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.salon',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'airzone',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 393>,
    'translation_key': None,
    'unique_id': 'airzone_unique_id_1:1',
    'unit_of_measurement': None,
  })
# ---
# name: test_airzone_create_climates[climate.salon-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 34,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 19.6,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: 'auto',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'auto',
        'low',
        'medium',
        'high',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Salon',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.OFF: 'off'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 15.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 393>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 19.1,
    }),
    'context': <ANY>,
    'entity_id': 'climate.salon',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
